# rewatch-companion

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  LICENSE  README.md  plan.md
.agents/skills/commit/: SKILL.md
.agents/skills/essay-metadata-tightening/: SKILL.md
.agents/skills/essay-tightening/: SKILL.md
.agents/skills/essay-tightening/references/: ai-writing-tells.md
.agents/skills/pr/: SKILL.md
.agents/skills/review/: SKILL.md
.github/workflows/: deploy.yml
content/shows/breaking-bad/: show.yaml
content/shows/breaking-bad/characters/gus-fring/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/characters/hank-schrader/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/characters/jesse-pinkman/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/characters/skyler-white/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/characters/walter-white/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/themes/colour-theory/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/themes/consequences/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/themes/purity-and-contamination/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/themes/say-my-name/: article.yaml  index.mdx  summary.mdx
content/shows/breaking-bad/themes/the-provider-myth/: article.yaml  index.mdx  summary.mdx
content/shows/succession/: show.yaml
content/shows/succession/about/: article.yaml  index.mdx  summary.mdx
content/shows/succession/about/what-succession-is-about/: article.yaml  index.mdx
content/shows/succession/characters/connor-roy/: article.yaml  index.mdx  summary.mdx
content/shows/succession/characters/greg-hirsch/: article.yaml  index.mdx  summary.mdx
content/shows/succession/characters/kendall-roy/: article.yaml  index.mdx  summary.mdx
content/shows/succession/characters/logan-roy/: article.yaml  index.mdx  summary.mdx
content/shows/succession/characters/roman-roy/: article.yaml  index.mdx  summary.mdx
content/shows/succession/characters/shiv-roy/: article.yaml  index.mdx  summary.mdx
content/shows/succession/characters/tom-wambsgans/: article.yaml  index.mdx  summary.mdx
content/shows/succession/themes/fractured-inheritance/: article.yaml  index.mdx  summary.mdx
content/shows/succession/themes/humiliation-as-education/: article.yaml  index.mdx  summary.mdx
docs/: project_plan.md
pipeline/: .env.example  AGENTS.md  README.md  agent.py  cli.py  extract_show_frames.py  filter_screenshot_candidates.py  find_hero_image.py  find_missing_hero_images.py  generate_about.py  generate_character.py  generate_episode.py  generate_essay.py  generate_missing_essays.py  generate_theme.py  hero_image_agent.py  hero_image_prompt.py  hero_image_rules.py  manifest.py  prompt.py  pyproject.toml  rate_limit_retry.py  research_fetch.py  schemas.py  screenshot_extraction.py  screenshot_filtering.py  settings.py
pipeline/common/: manifest.py  network_preflight.py  schemas.py  settings.py  telemetry.py
pipeline/essay_generation/: __init__.py  agent.py  generate_character.py  generate_episode.py  generate_essay.py  generate_missing_essays.py  generate_theme.py  prompt.py  research_fetch.py  research_limits.py  schemas.py
pipeline/essay_generation/tests/unit/: test_generate_essay.py  test_missing_essays.py  test_prompt.py  test_research_fetch.py
pipeline/hero_images/: __init__.py  agent.py  find_hero_image.py  find_missing_hero_images.py  prompt.py  schemas.py
pipeline/hero_images/tests/unit/: test_hero_image.py  test_missing_hero_images.py
pipeline/manifests/: breaking-bad.yaml  succession.yaml
pipeline/tests/unit/: test_cli.py  test_generate_essay.py  test_hero_image.py  test_manifest_content.py  test_missing_generation_scripts.py  test_prompt.py  test_research_fetch.py  test_screenshot_extraction.py  test_screenshot_filtering.py
site/: AGENTS.md  README.md  astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt
site/src/: content.config.ts
site/src/components/: EpisodeNav.astro  EssayNav.astro  EssaySidebar.astro  HeroImage.astro  SpoilerNotice.astro
site/src/layouts/: BaseLayout.astro
site/src/lib/: imageAssets.ts
site/src/pages/: 404.astro  index.astro
site/src/styles/: global.css
(+331 files in other folders)
